--- a/src/app/dashboard/cashbook/cashbook-report-tab/cashbook-report-tab.component.html
+++ b/src/app/dashboard/cashbook/cashbook-report-tab/cashbook-report-tab.component.html
@@ -40,23 +40,46 @@
     <div class="col-sm-10">
       <div class="form-check">
         <label class="form-check-label">
-          <input class="form-check-input" type="radio" name="gridRadios" id="monthlyReport" value="option1" checked>Monthly
+          <input class="form-check-input" type="radio" name="gridRadios" id="monthlyReport" value="option1" checked [(ngModel)]="reportType">Monthly
         </label>
       </div>
       <div class="form-check">
         <label class="form-check-label">
-          <input class="form-check-input" type="radio" name="gridRadios" id="QuaterlyReport" value="option2">Quaterly
+          <input class="form-check-input" type="radio" name="gridRadios" id="QuaterlyReport" value="option2" [(ngModel)]="reportType">Quaterly
         </label>
       </div>
       <div class="form-check">
         <label class="form-check-label">
-          <input class="form-check-input" type="radio" name="gridRadios" id="yearlyReport" value="option3">Yearly
+          <input class="form-check-input" type="radio" name="gridRadios" id="yearlyReport" value="option3" [(ngModel)]="reportType" >Yearly
         </label>
       </div>
-      <div class="form-check">
-        <label class="form-check-label">
-          <input class="form-check-input" type="radio" name="gridRadios" id="rangeReport" value="option3">nk
-        </label>
+      <div class="row">
+        <div class="form-group col s6">
+          <div class="form-check">
+            <label class="form-check-label">
+              <input class="form-check-input" type="radio" name="gridRadios" id="rangeReport" value="option4" [(ngModel)]="reportType">Date Range
+            </label>
+          </div>
+        </div>
+        <div class="form-group col s6" *ngIf="reportType=='option4'">
+          <div class="row">
+            <label>
+              From : 
+              <input [owlDateTimeTrigger]="dt1" [owlDateTime]="dt1" [(ngModel)]="fromTime">
+              <owl-date-time [pickerType]="'calendar'" #dt1></owl-date-time>
+            </label>
+          </div>
+        </div>
+        <div class="form-group col s6" *ngIf="reportType=='option4'">
+          <div class="row">
+            <label>
+              To : 
+              <input [owlDateTimeTrigger]="dt2" [owlDateTime]="dt2" [(ngModel)]="toTime">
+              <owl-date-time [pickerType]="'calendar'" #dt2></owl-date-time>
+            </label>
+          </div>
+        </div>
+
       </div>
     </div>
   </div>
