Initial commit, create cashbook.

--- a/src/app/dashboard/cashbook/cashbook-crud-tab/cashbook-crud-tab.component.html
+++ b/src/app/dashboard/cashbook/cashbook-crud-tab/cashbook-crud-tab.component.html
@@ -3,7 +3,7 @@
   <div class="col s12">
     <div class="row tablehead">
       <div class="col s12 tableheadbody">
-        <a class="waves-effect waves-light black btn" (click)="createCashbook({}, true); " routerLink="newcashbook" style="float:right;">
+        <a class="waves-effect waves-light black btn" (click)="createCashbook(); " routerLink="newcashbook" style="float:right;">
           <i class="material-icons">add</i>
         </a>
       </div>
