--- a/src/app/dashboard/cashbook/cashbook-crud-tab/new-cashbook/new-cashbook.component.html
+++ b/src/app/dashboard/cashbook/cashbook-crud-tab/new-cashbook/new-cashbook.component.html
@@ -2,19 +2,19 @@
   <div class="form-group row">
     <label for="cashbookName" class="col-sm-2 col-form-label">Cashbook Name</label>
     <div class="col-sm-10">
-      <input class="form-control form-control-lg" id="cashbookName" required>
+      <input class="form-control form-control-lg" id="cashbookName" name="cashbookName" [(ngModel)]="data.name" #cashbookName="ngModel" required>
     </div>
   </div>
   <div class="form-group row">
     <label for="bankName" class="col-sm-2 col-form-label">Bank Name</label>
     <div class="col-sm-10">
-      <input class="form-control form-control-lg" id="bankName" required>
+      <input class="form-control form-control-lg" id="bankName" name="bankName" [(ngModel)]="data.bankName" #bankName="ngModel" required>
     </div>
   </div>
   <div class="form-group row">
     <label for="accountType" class="col-sm-2 col-form-label">Account Type</label>
     <div class="col-sm-10">
-      <select class="form-control form-control-lg" id="accountType">
+      <select class="form-control form-control-lg" id="accountType" name="accountType" [(ngModel)]="data.accountType" #accountType="ngModel" required>
         <option>SAVING</option>
         <option>CURRENT</option>
       </select>
@@ -22,8 +22,9 @@
   </div>
   <div class="form-group row">
     <div class="col-sm-10">
-      <button [disabled]="!cashbookForm.valid" type="submit" class="btn btndefult btn-primary">
-        Submit</button>
+      <button [disabled]="cashbookForm.invalid" type="submit" (click)="save()" class="btn btndefult btn-primary">
+        Submit
+      </button>
     </div>
   </div>
 </form>
