--- a/src/app/dashboard/cashbook/cashbook-report-tab/cashbook-report-tab.component.html
+++ b/src/app/dashboard/cashbook/cashbook-report-tab/cashbook-report-tab.component.html
@@ -1,37 +1,28 @@
-<form class="CashbookForm">
+<form class="CashbookReportForm" #cashbookReportForm="ngForm">
   <div class="form-group row">
     <label for="cashbookName" class="col-sm-2 col-form-label">Cashbook Name</label>
     <div class="col-sm-10">
-      <select class="form-control form-control-lg" id="cashbookName">
-        <option>Narendra</option>
-        <option>2</option>
-        <option>3</option>
-        <option>4</option>
-        <option>5</option>
+      <select class="form-control form-control-lg" id="cashbookName" name="cashbookName" [(ngModel)]="cashbookReportReq.name" #cashbookName="ngModel">
+        <option value="select" disabled>---select---</option>
+        <option *ngFor="let item of cbNames" value="{{item.name}}">{{item.name}}</option>
       </select>
     </div>
   </div>
   <div class="form-group row">
     <label for="bankName" class="col-sm-2 col-form-label">Bank Name</label>
     <div class="col-sm-10">
-      <select class="form-control form-control-lg" id="bankName">
-        <option>Narendra</option>
-        <option>2</option>
-        <option>3</option>
-        <option>4</option>
-        <option>5</option>
+      <select class="form-control form-control-lg" id="bankName" name="bankName" [(ngModel)]="cashbookReportReq.bankName" #bankName="ngModel">
+        <option value="select" disabled>---select---</option>
+        <option *ngFor="let item of bankNames">{{item.bankName}}</option>
       </select>
     </div>
   </div>
   <div class="form-group row">
     <label for="accountType" class="col-sm-2 col-form-label">Account Type</label>
     <div class="col-sm-10">
-      <select class="form-control form-control-lg" id="accountType">
-        <option>Narendra</option>
-        <option>2</option>
-        <option>3</option>
-        <option>4</option>
-        <option>5</option>
+      <select class="form-control form-control-lg" id="accountType" name="accountType" [(ngModel)]="cashbookReportReq.accountType" #accountType="ngModel">
+        <option>SAVING</option>
+        <option>CURRENT</option>
       </select>
     </div>
   </div>
@@ -65,7 +56,7 @@
           <div class="row">
             <label>
               From : 
-              <input [owlDateTimeTrigger]="dt1" [owlDateTime]="dt1" [(ngModel)]="fromTime">
+              <input [owlDateTimeTrigger]="dt1" [owlDateTime]="dt1" [(ngModel)]="fromTime" required>
               <owl-date-time [pickerType]="'calendar'" #dt1></owl-date-time>
             </label>
           </div>
@@ -74,18 +65,19 @@
           <div class="row">
             <label>
               To : 
-              <input [owlDateTimeTrigger]="dt2" [owlDateTime]="dt2" [(ngModel)]="toTime">
+              <input [owlDateTimeTrigger]="dt2" [owlDateTime]="dt2" [(ngModel)]="toTime" required>
               <owl-date-time [pickerType]="'calendar'" #dt2></owl-date-time>
             </label>
           </div>
         </div>
-
       </div>
     </div>
   </div>
   <div class="form-group row">
     <div class="col-sm-10">
-      <button type="button" class="btn btn-primary">Report</button>
+      <button [disabled]="cashbookReportForm.invalid" type="submit" (click)="getCashbookReport()" class="btn btndefult btn-primary">
+        Report
+      </button>
     </div>
   </div>
 </form>
