--- a/src/app/dashboard/cashbook/cashbook-report-tab/cashbook-report-tab.component.html
+++ b/src/app/dashboard/cashbook/cashbook-report-tab/cashbook-report-tab.component.html
@@ -13,7 +13,7 @@
     <div class="col-sm-10">
       <select class="form-control form-control-lg" id="bankName" name="bankName" [(ngModel)]="cashbookReportReq.bankName" #bankName="ngModel">
         <option value="select" disabled selected>---select---</option>
-        <option *ngFor="let item of bankNames">{{item.bankName}}</option>
+        <option *ngFor="let item of cbBankNames" value="{{item.bankName}}">{{item.bankName}}</option>
       </select>
     </div>
   </div>
@@ -27,11 +27,11 @@
     </div>
   </div>
   <div class="form-group row">
-    <label for="accountType" class="col-sm-2 col-form-label">Date Range</label>
+    <label for="accountType" class="col-sm-2 col-form-label">Date Range *</label>
     <div class="col-sm-10">
       <div class="form-check">
         <label class="form-check-label">
-          <input class="form-check-input" type="radio" name="gridRadios" id="monthlyReport" value="monthReport" checked [(ngModel)]="reportType">
+          <input class="form-check-input" type="radio" name="gridRadios" id="monthlyReport" value="monthReport" checked [(ngModel)]="reportType" required>
           Last Month
         </label>
       </div>
