--- a/src/app/dashboard/cashbook/cashbook-crud-tab/cashbook-crud-tab.component.css
+++ b/src/app/dashboard/cashbook/cashbook-crud-tab/cashbook-crud-tab.component.css
@@ -5,3 +5,14 @@ table.dataTable thead th, table.dataTable thead td {
     padding: 8px;
     border-bottom: 1px solid #111;
 }
+
+table thead {
+  background-color: #ffffff;
+}
+
+table tr:nth-child(odd) {
+  background-color: #f1f1f1;
+}
+table tr:nth-child(even) {
+  background-color: #ffffff;
+}
