--- a/src/app/dashboard/permission/permission-new/permission-new.component.html
+++ b/src/app/dashboard/permission/permission-new/permission-new.component.html
@@ -7,7 +7,7 @@
         <input class="form-control" name="name" [(ngModel)]="schoolService.selectedpermission.name" placeholder="Role Name">
       </div>
       <div class="form-group col s10">
-        <select class="form-control" [(ngModel)]="schoolService.selectedpermission.roleid">
+        <select class="form-control" [(ngModel)]="schoolService.selectedpermission.roleId">
           <option *ngFor="let role of role" [value]="role.id">
             {{role.type_name}}
           </option>
