--- a/src/app/dashboard/cashbook/cashbook.component.html
+++ b/src/app/dashboard/cashbook/cashbook.component.html
@@ -1,10 +1,24 @@
 <div class="row">
 <ul class="tabs list-inline cashbook-tab">
   <li class="tab firstTab">
-    <a [routerLink]="['cashbookcrudtab']" [ngClass]="{'active': currentState == 'cashbookcrudtab', 'inactive': currentState != 'cashbookcrudtab'}" (click)="currentState = 'cashbookcrudtab'">Manage Cashbook</a>
+    <a [routerLink]="['cashbookcrudtab']" [ngClass]="{'active': currentState == 'cashbookcrudtab', 'inactive': currentState != 'cashbookcrudtab'}"
+    (click)="currentState = 'cashbookcrudtab'">Manage Cashbook</a>
   </li>
   <li class="tab">
-    <a [routerLink]="['cashbookreporttab']" [ngClass]="{'active': currentState == 'cashbookreporttab', 'inactive': currentState != 'cashbookreporttab'}" (click)="currentState = 'cashbookreporttab'">Cashbook Report</a>
+    <a [routerLink]="['transactionstab']" [ngClass]="{'active': currentState == 'transactionstab', 'inactive': currentState != 'transactionstab'}"
+    (click)="currentState = 'transactionstab'">Transactions</a>
+  </li>
+  <li class="tab">
+    <a [routerLink]="['openingbalancetab']" [ngClass]="{'active': currentState == 'openingbalancetab', 'inactive': currentState != 'openingbalancetab'}"
+      (click)="currentState = 'openingbalancetab'">Opening Balance</a>
+  </li>
+    <li class="tab">
+      <a [routerLink]="['cashtransfertab']" [ngClass]="{'active': currentState == 'cashtransfertab', 'inactive': currentState != 'cashtransfertab'}"
+        (click)="currentState = 'cashtransfertab'">Cash Transfer</a>
+    </li>
+  <li class="tab">
+    <a [routerLink]="['cashbookreporttab']" [ngClass]="{'active': currentState == 'cashbookreporttab', 'inactive': currentState != 'cashbookreporttab'}"
+      (click)="currentState = 'cashbookreporttab'">Cashbook Report</a>
   </li>
 </ul>
 </div>
