--- a/src/app/dashboard/institudes/institute-list/institute-list.component.html
+++ b/src/app/dashboard/institudes/institute-list/institute-list.component.html
@@ -1,3 +1,39 @@
-<p>
-  institute-list works!
-</p>
+<div class="container">
+    <div class="page-header">
+        <span><h5>Institute <span class="pull-right">
+            <button class="btn btn-primary btn-sm reduce-padding" data-title="Edit" data-toggle="modal" data-target="#edit" ><fa name="plus-square"></fa></button>
+           </span></h5>
+          
+      </span>
+    </div>
+    <hr/>
+    <div class="row tb-header" >
+      <div class="col-sm-3 col-md-3">
+        Institute Name
+      </div>
+      <div class="col-sm-3 col-md-3">
+        Sanstha Name
+      </div>
+      <div class="col-sm-3 col-md-3">
+         Phone Number
+      </div>
+      <div class="col-sm-3 col-md-3">
+          Action
+      </div>
+    </div>
+    <div class="row tb-height" *ngFor="let item of data">
+      <div class="col-sm-3 col-md-3">
+        {{item.institude_name}}
+      </div>
+      <div class="col-sm-3 col-md-3">
+        {{item.institude_sansta_name}}
+      </div>
+      <div class="col-sm-3 col-md-3">
+          {{item.institude_phone_no}}
+      </div>
+      <div class="col-sm-3 col-md-3">
+          <button class="btn btn-primary btn-sm reduce-padding" data-title="Edit" data-toggle="modal" data-target="#edit" ><fa name="edit"></fa></button>
+          <button class="btn btn-danger btn-sm reduce-padding" data-title="Delete" data-toggle="modal" data-target="#delete" ><fa name="trash"></fa></button>
+      </div>
+    </div>
+  </div>
