--- a/src/app/dashboard/sanstha/sanstha.component.html
+++ b/src/app/dashboard/sanstha/sanstha.component.html
@@ -1,3 +1,19 @@
-<p>
-  sanstha works!
-</p>
+<div class="container">
+    <div class="row">
+      <div class="col-sm-3">
+      </div>
+      <div class="col-sm-9">
+        <ul class="tabs list-inline sanstha-tab">
+          <li class="tab firstTab"><a [routerLink]="['sansthas']" >Sanstha</a></li>
+          <li class="tab"><a [routerLink]="['institute']">Institute</a></li>
+          <li class="tab"><a [routerLink]="['school']">School</a></li>
+          <li class="tab"><a [routerLink]="['section']">Section</a></li>
+          <li class="tab"><a [routerLink]="['division']">Division</a></li>
+        </ul>
+      </div>
+    </div>
+    <div>
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+  
