--- a/src/app/dashboard/religion/religion.component.html
+++ b/src/app/dashboard/religion/religion.component.html
@@ -2,19 +2,19 @@
   <ul class="tabs list-inline religion">
     <li class="tab firstTab">
       <a [routerLink]="['religiontab']" [ngClass]="{'active': currentState == 'religiontab', 'inactive': currentState != 'religiontab'}"
-        (click)="currentState = 'religiontab'">Country</a>
+        (click)="currentState = 'religiontab'">Religion</a>
     </li>
     <li class="tab">
       <a [routerLink]="['castetab']" [ngClass]="{'active': currentState == 'castetab', 'inactive': currentState != 'castetab'}"
-        (click)="currentState = 'castetab'">State</a>
+        (click)="currentState = 'castetab'">Caste</a>
     </li>
     <li class="tab">
       <a [routerLink]="['subcastetab']" [ngClass]="{'active': currentState == 'subcastetab', 'inactive': currentState != 'subcastetab'}"
-        (click)="currentState = 'subcastetab'">District</a>
+        (click)="currentState = 'subcastetab'">SubCaste</a>
     </li>
     <li class="tab">
       <a [routerLink]="['categorytab']" [ngClass]="{'active': currentState == 'categorytab', 'inactive': currentState != 'categorytab'}"
-        (click)="currentState = 'categorytab'">Taluka</a>
+        (click)="currentState = 'categorytab'">Category</a>
     </li>
   </ul>
 </div>
