--- a/src/app/dashboard/religion/subcaste-tab/subcaste-tab.component.html
+++ b/src/app/dashboard/religion/subcaste-tab/subcaste-tab.component.html
@@ -1,3 +1,42 @@
-<p>
-  subcaste-tab works!
-</p>
+<div class="container">
+  <div class="page-header">
+    <span>
+      <h5>Sub Caste
+        <span class="pull-right">
+          <button class="btn btn-primary btn-sm reduce-padding" data-title="Edit" data-toggle="modal" data-target="#edit">
+            <fa name="plus-square"></fa>
+          </button>
+        </span>
+      </h5>
+
+    </span>
+  </div>
+  <hr/>
+  <div class="row tb-header">
+    <div class="col-sm-3 col-md-3">
+      Sub Caste Name
+    </div>
+    <div class="col-sm-3 col-md-3">
+      Caste Name
+    </div>
+    <div class="col-sm-3 col-md-3">
+      Action
+    </div>
+  </div>
+  <div class="row tb-height" *ngFor="let item of data">
+    <div class="col-sm-3 col-md-3">
+      {{item.subcaste_name}}
+    </div>
+    <div class="col-sm-3 col-md-3">
+      {{item.subcaste_caste_id}}
+    </div>
+    <div class="col-sm-3 col-md-3">
+      <button class="btn btn-primary btn-sm reduce-padding" data-title="Edit" data-toggle="modal" data-target="#edit">
+        <fa name="edit"></fa>
+      </button>
+      <button class="btn btn-danger btn-sm reduce-padding" data-title="Delete" data-toggle="modal" data-target="#delete">
+        <fa name="trash"></fa>
+      </button>
+    </div>
+  </div>
+</div>
