--- a/src/app/dashboard/country/country.component.html
+++ b/src/app/dashboard/country/country.component.html
@@ -1,21 +1,29 @@
-<div class="row">
-  <ul class="tabs list-inline country">
-    <li class="tab firstTab">
-      <a [routerLink]="['countrytab']" [ngClass]="{'active': currentState == 'countrytab', 'inactive': currentState != 'countrytab'}"
-        (click)="currentState = 'countrytab'">Country</a>
-    </li>
-    <li class="tab">
-      <a [routerLink]="['statetab']" [ngClass]="{'active': currentState == 'statetab', 'inactive': currentState != 'statetab'}"
-        (click)="currentState = 'statetab'">State</a>
-    </li>
-    <li class="tab">
-      <a [routerLink]="['districttab']" [ngClass]="{'active': currentState == 'districttab', 'inactive': currentState != 'districttab'}"
-        (click)="currentState = 'districttab'">District</a>
-    </li>
-    <li class="tab">
-      <a [routerLink]="['talukatab']" [ngClass]="{'active': currentState == 'talukatab', 'inactive': currentState != 'talukatab'}"
-        (click)="currentState = 'talukatab'">Taluka</a>
-    </li>
-  </ul>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-3">
+    </div>
+      <div class="col-sm-9">
+        <ul class="tabs list-inline country">
+          <li class="tab firstTab">
+            <a [routerLink]="['countrytab']" [ngClass]="{'active': currentState == 'countrytab', 'inactive': currentState != 'countrytab'}"
+              (click)="currentState = 'countrytab'">Country</a>
+          </li>
+          <li class="tab">
+            <a [routerLink]="['statetab']" [ngClass]="{'active': currentState == 'statetab', 'inactive': currentState != 'statetab'}"
+              (click)="currentState = 'statetab'">State</a>
+          </li>
+          <li class="tab">
+            <a [routerLink]="['districttab']" [ngClass]="{'active': currentState == 'districttab', 'inactive': currentState != 'districttab'}"
+              (click)="currentState = 'districttab'">District</a>
+          </li>
+          <li class="tab">
+            <a [routerLink]="['talukatab']" [ngClass]="{'active': currentState == 'talukatab', 'inactive': currentState != 'talukatab'}"
+              (click)="currentState = 'talukatab'">Taluka</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  <div>
+    <router-outlet></router-outlet>
+  </div>
 </div>
-<router-outlet></router-outlet>
