--- a/src/app/dashboard/sanstha/sanstha-form/sanstha-form.component.html
+++ b/src/app/dashboard/sanstha/sanstha-form/sanstha-form.component.html
@@ -1,3 +1,45 @@
-<p>
-  sanstha-form works!
-</p>
+<div class="row modal-dialog">
+    <div class="col-sm-12">
+        <h5 style="text-align:center">Enter Details</h5>
+        <form class="menu-form modal-body" >
+            <div class="form-group col-sm-10">
+                <label class="control-label" for="sanstha_name">Sanstha Name</label>
+                <input class="form-control" name="sanstha_name" [(ngModel)]="data.sanstha_name" placeholder="sanstha_name">
+            </div>
+            <div class="form-group col-sm-10">
+                <label class="control-label" for="user_name">User Name</label>
+                <input class="form-control" name="user_name" [(ngModel)]="data.user_name" placeholder="user_name">
+            </div>
+
+            <div class="form-group col-sm-10">
+                <label class="control-label" for="password">Password</label>
+                <input class="form-control" name="password" [(ngModel)]="data.password" placeholder="password">
+            </div>
+
+            <div class="form-group col-sm-10">
+                <label class="control-label" for="Noofschool">No of school</label>
+                <input class="form-control" name="Noofschool" [(ngModel)]="data.no_of_school" placeholder="Noofschool">
+            </div>
+            
+            <div class="form-group col-sm-10">
+                <label class="control-label" for="sanstha_subscription_years">Sanstha Subscription years</label>
+                <input class="form-control" name="sanstha_subscription_years" [(ngModel)]="data.sanstha_subscription_years" placeholder="Noofschool">
+            </div>
+
+          </form>
+          <div class="row">
+              <div class="col-sm-3">
+                  <button type="button" class="btn btndefult" (click)="save()" >
+                      Submit</button>
+              </div>
+              <div class="col-sm-3">
+                  <button type="button" class="btn btndefult" (click)="reset()">
+                      Reset</button>
+              </div>
+              <div class="col-sm-3">
+                  <button type="button" class="btn btndefult" (click)="onCloseCancel()">
+                      Cancel</button>
+              </div>
+          </div>
+    </div>
+</div>
